--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
   },
   "dependencies": {
     "expo": "^31.0.2",
+    "prop-types": "^15.6.2",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.0.tar.gz"
   },
   "devDependencies": {
-    "babel-preset-expo": "^5.0.0",
     "babel-eslint": "^10.0.1",
+    "babel-preset-expo": "^5.0.0",
     "eslint": "^5.9.0",
     "eslint-plugin-react": "^7.11.1",
     "prettier-eslint": "^8.8.2",
